[package]
name = "seed-calendar"
version = "0.1.0"
authors = ["Glenn Slotte <glenn@slotte.net>"]
license = "MPL-2.0"
description = "calendar UI component toolkit for seed"
repository = "https://github.com/glennsl/seed-calendar"
edition = "2018"

[workspace]
members = [
    "examples/kitchen_sink",
]

[dependencies]
chrono = "0.4.19"
js-sys = "0.3.50"
# seed = "^0.8.0"
seed = { git = "https://github.com/glennsl/seed.git", branch = "sensofix", default-features = false }
wasm-bindgen = "0.2.73"
