[package]
name = "kitchen_sink"
version = "0.0.1"
authors = ["Glenn Slotte <glenn@slotte.net>"]
license = "MPL-2.0"
description = "kitchen sink example for seed-calendar"
repository = "https://github.com/glennsl/seed-calendar"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed-calendar = { path = "../../" }
# seed = "^0.8.0"
seed = { git = "https://github.com/glennsl/seed.git", rev = "40d0514", default-features = false }
chrono = "0.4.19"
